cluster/snippet-box/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: snippet-box-deployment
  namespace: snippet-box
spec:
  replicas: 1
  serviceName: snippet-box
  selector:
    matchLabels:
      app: snippet-box
  template:
    metadata:
      labels:
        app: snippet-box
    spec:
      nodeSelector:
        role: apps
      containers:
        - name: snippet-box
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/pawelmalak/snippet-box@sha256:4aac6fe8818dbb78a60e09d1556949e28f85cff8d50bdc6356b898806ea5f4f7
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /app/data
              name: snippet-box-vol
      volumes:
        - name: snippet-box-vol
          persistentVolumeClaim:
            claimName: snippet-box-pvc
