cluster/snippet-box/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: snippet-box-service
    namespace: snippet-box
spec:
    type: ClusterIP
    selector:
        app: snippet-box
    ports:
      - port: 5000
        protocol: TCP
