cluster/snippet-box/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: snippet-box-route
  namespace: snippet-box
  annotations:
    k8s-dns.nathanv.me/hostname: snippet-box.nathanv.app
    k8s-dns.nathanv.me/external: tunnel.nathanv.app
    k8s-dns.nathanv.me/internal: reverse-proxy.svc.nathanv.home
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`snippet-box.nathanv.app`)
    kind: Rule
    services:
    - name: snippet-box-service
      port: 5000
    middlewares:
    - name: authentik-forward-auth
      namespace: authentik
  tls:
    certResolver: le
    domains:
    - sans:
      - "*.nathanv.app"
